[package]
name = "backend"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.130"


[dependencies.rocket]
rocket = "0.5.0-rc.1"
features = ["json"]


[dependencies.uuid]
uuid = "0.8"
features = ["v4"]